--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "npm run lint && npm run unit_tests && npm run integration_tests && npm run acceptance_tests",
+    "test": "npm run lint && npm run unit_tests && npm run integration_tests && npm run browser_tests",
     "lint": "./node_modules/.bin/eslint . --fix",
     "unit_tests": "./node_modules/.bin/mocha test/unit",
     "integration_tests": "./node_modules/.bin/mocha test/integration",
-    "acceptance_tests": "./node_modules/.bin/wdio wdio.conf.js"
+    "browser_tests": "./node_modules/.bin/wdio wdio.conf.js"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -21,14 +21,15 @@
   },
   "devDependencies": {
     "@types/mongodb": "^2.2.4",
+    "@types/webdriverio": "^4.7.1",
     "babel-eslint": "^7.2.3",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.8.0",
-    "nodemon": "^1.11.0",
     "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0",
     "wdio-mocha-framework": "^0.5.10",
     "wdio-spec-reporter": "^0.1.0",
-    "webdriverio": "^4.8.0",
-    "supertest": "^3.0.0"
+    "webdriverio": "^4.8.0"
   }
 }
