--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "object-curly-spacing": [
             "error",
             "always"
-        ]
+        ],
+        "no-console": "error"
     }
 }
