--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "chai": "^4.0.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "mongodb": "^2.2.28",
-    "pug": "^2.0.0-rc.2"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.0-rc.2",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "@types/mongodb": "^2.2.4",
