--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "chai": "^4.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.28",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
