--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.3",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.28",
+    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2",
