--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sinon-chai": "^2.11.0",
     "supertest": "^3.0.0",
     "wdio-mocha-framework": "^0.5.10",
+    "wdio-phantomjs-service": "^0.2.2",
     "wdio-spec-reporter": "^0.1.0",
     "webdriverio": "^4.8.0"
   }
