--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-google": "^0.8.0",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "phantomjs": "^2.1.7",
     "sinon": "^2.3.4",
     "sinon-chai": "^2.11.0",
     "supertest": "^3.0.0",
