--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "explore-testing",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "npm run lint && npm run unit_tests && npm run integration_tests && npm run browser_tests",
-    "lint": "./node_modules/.bin/eslint . --fix",
+    "lint": "./node_modules/.bin/eslint .",
     "unit_tests": "./node_modules/.bin/mocha test/unit/**/*.js",
     "integration_tests": "./node_modules/.bin/mocha test/integration",
     "browser_tests": "./node_modules/.bin/wdio wdio.conf.js"
@@ -15,7 +15,6 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
-    "chai": "^4.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
@@ -32,6 +31,7 @@
     "@types/mongodb": "^2.2.4",
     "@types/webdriverio": "^4.7.1",
     "babel-eslint": "^7.2.3",
+    "chai": "^4.0.2",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.8.0",
     "mocha": "^3.4.2",
