--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "gulp-env": "^0.4.0",
+    "gulp-eslint": "^4.0.0",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.28",
     "morgan": "^1.8.2",
@@ -34,6 +36,9 @@
     "chai": "^4.0.2",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.8.0",
+    "gulp": "^3.9.1",
+    "gulp-mocha": "^4.3.1",
+    "gulp-sync": "^0.1.4",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "phantomjs": "^2.1.7",
