Moved static out of app folder, modifying tests

--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "g": "^2.0.1",
-    "gulp-env": "^0.4.0",
-    "gulp-eslint": "^4.0.0",
+    "gulp": "^3.9.1",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.28",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2",
-    "selenium-webdriver": "^3.4.0",
-    "session": "^0.1.0",
-    "yarn": "^0.24.5"
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "@types/webdriverio": "^4.7.1",
@@ -38,12 +35,18 @@
     "chai": "^4.0.2",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.8.0",
-    "gulp": "^3.9.1",
-    "gulp-mocha": "^4.3.1",
+    "gulp-coverage": "^0.3.38",
+    "gulp-env": "^0.4.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-istanbul": "^1.1.2",
+    "gulp-mocha": "3",
     "gulp-sync": "^0.1.4",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "nyc": "^11.0.3",
     "phantomjs": "^2.1.7",
+    "selenium-webdriver": "^3.4.0",
     "sinon": "^2.3.4",
     "sinon-chai": "^2.11.0",
     "supertest": "^3.0.0",
